--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.10
+	* configure.ac: 0.3.10
+
 2009-02-10  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-area.c (hd_status_area_new):
