--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+hildon-status-menu (0.3.10) unstable; urgency=low
+
+  * src/hd-status-area.c (hd_status_area_new),
+    src/hd-status-menu.c (hd_status_menu_new): Set accept-focus to FALSE
+    for area and menu.
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 10 Feb 2009 15:32:36 +0200
+
 hildon-status-menu (0.3.9) unstable; urgency=low
 
   * Update priority of rtcom-notification-ui.desktop plugin.
