--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.11
+	* configure.ac: 0.3.11
+
 2009-02-12  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Use RGBA window with transparent background for status area.
