* src/status-menu.plugins.in: Add priorites of new plugins. Fixes: 	NB#102636 	* debian/changelog: Update
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@35683 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-02-20  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/status-menu.plugins.in: Add priorites of new plugins. Fixes:
+	NB#102636
+
+	* debian/changelog: Update
+
 2009-02-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.11
