--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 hildon-status-menu (0.3.12~unreleased) unstable; urgency=low
 
   * Add priorites of new plugins. Fixes: NB#102636
+  * Make hildon-status-menu maemo-launched. Fixes: NB#101035
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 11 Feb 2009 09:21:01 +0200
 
