--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-hildon-status-menu (0.3.12~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.12) unstable; urgency=low
 
   * Add priorites of new plugins. Fixes: NB#102636
   * Make hildon-status-menu maemo-launched. Fixes: NB#101035
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 11 Feb 2009 09:21:01 +0200
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 23 Feb 2009 12:18:01 +0200
 
 hildon-status-menu (0.3.11) unstable; urgency=low
 
