--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.13~unreleased) unstable; urgency=low
+
+  * unreleased
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 23 Feb 2009 13:54:56 +0200
+
 hildon-status-menu (0.3.12) unstable; urgency=low
 
   * Add priorites of new plugins. Fixes: NB#102636
