--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* debian/hildon-status-menu.xsession: Use dsmetool.
 
+	* debian/changelog: Update
+
 2009-03-11  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* debian/hildon-status-menu.xsession: Set MAEMO_INVOKER_DELAY=1
