--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-hildon-status-menu (0.3.13~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.13) unstable; urgency=low
 
-  * Use dsmetool to start h-s-m.
+  * Jan Arne: Use dsmetool to start h-s-m.
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 23 Feb 2009 13:54:56 +0200
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 12 Mar 2009 15:32:39 +0200
 
 hildon-status-menu (0.3.12) unstable; urgency=low
 
