--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.13
+	* configure.ac: 0.3.13
+
 2009-03-11  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* debian/hildon-status-menu.xsession: Use dsmetool.
