* src/status-menu.plugins.in: Reorder items in status menu according 	to new ui spec.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@36652 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-13  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/status-menu.plugins.in: Reorder items in status menu according
+	to new ui spec.
+
 2009-03-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.13
