--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-16  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-status-menu.c (hd_status_menu_init, hd_status_menu_map):
+	Center status menu.
+
 2009-03-13  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/status-menu.plugins.in: Reorder items in status menu according
