--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.14
+	* configure.ac: 0.3.14
+
 2009-03-16  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-menu.c (hd_status_menu_init, hd_status_menu_map):
