start new package version
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@37382 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.15~unreleased) unstable; urgency=low
+
+  * writeme
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 31 Mar 2009 08:49:30 +0300
+
 hildon-status-menu (0.3.14) unstable; urgency=low
 
   Jan Arne:
