--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-04-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/hildon-status-menu.c (console_quiet): New function (based on
+	maemo-launcher code).
+	(main): Call console_quiet to quiesce the console output unless
+	DEBUG_OUTPUT environment variable is defined.
+
 2009-03-31  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.15
