* src/hd-status-area.c (hd_status_area_realize): Set background to 	transparent pixmap.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@39191 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-20  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-status-area.c (hd_status_area_realize): Set background to
+	transparent pixmap.
+
 2009-04-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.16
