--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ hildon-status-menu (0.3.18~unreleased) unstable; urgency=low
 
   Jan Arne:
   * Fixes: NB#119591 - Memory corruption code in hildon-status-menu
+  * Fixes: NB#120006 - Status Area layout not according to latest guidelines
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon,  1 Jun 2009 08:41:45 +0300
 
