* src/hd-status-menu.c (hd_status_menu_dbus_handler): New function to         catch D-Bus signals. Exits when shutdown_ind is received.         (hd_status_menu_init): Connect to D-Bus system bus and start listening         to shutdown_ind from DSME.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@39982 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-06-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/hd-status-menu.c (hd_status_menu_dbus_handler): New function to
+	catch D-Bus signals. Exits when shutdown_ind is received.
+	(hd_status_menu_init): Connect to D-Bus system bus and start listening
+	to shutdown_ind from DSME.
+
 2009-06-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.18
