--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 hildon-status-menu (0.3.19~unreleased) unstable; urgency=low
 
-  * foo
+  Kimmo:
+  * Exit on shutdown_ind signal.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon,  8 Jun 2009 10:38:16 +0300
 
