--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* src/hd-status-menu.c (hd_status_menu_dbus_handler): New function to
 	catch D-Bus signals. Exits when shutdown_ind is received.
 	(hd_status_menu_init): Connect to D-Bus system bus and start listening
-	to shutdown_ind from DSME.
+	to shutdown_ind from DSME. Fixes: NB#111430
 
 2009-06-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
