--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.19
+	* configure.ac: 0.3.19
+
 2009-06-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	* src/hd-status-menu.c (hd_status_menu_dbus_handler): New function to
