Fixes: NB#127515 in previous commit
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@40891 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 hildon-status-menu (0.3.20) unstable; urgency=low
 
   [ Peter Csaszar ]
-  * adding init script to make af-sb-init.sh script to start status menu
-    on sbox
+  * Fixes: NB#127515 - adding init script to make af-sb-init.sh script to
+    start status menu on sbox
 
  -- Peter Csaszar <peter.csaszar@blumsoft.eu>  Fri, 10 Jul 2009 14:08:57 +0200
 
