--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hildon-status-menu (0.3.21) unstable; urgency=low
+
+  [ Peter Csaszar ]
+  * foo
+
+ -- Peter Csaszar <peter.csaszar@blumsoft.eu>  Fri, 10 Jul 2009 14:08:57 +0200
+
 hildon-status-menu (0.3.20) unstable; urgency=low
 
   [ Peter Csaszar ]
