--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-07-24  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Changes to status area margins and icons
+
+	* src/hd-status-area-box.c (ITEM_HEIGHT, ITEM_WIDTH, CUSTOM_MARGIN_9,
+	  SPACING, PADDING_LEFT, hd_status_area_box_size_allocate,
+	  hd_status_area_box_size_request):
+	* src/hd-status-area.c (CUSTOM_MARGIN_9, CUSTOM_MARGIN_10,
+	  hd_status_area_init):
+
 2009-06-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.19
