2009-07-24  Jan Arne Petersen  <jpetersen@openismus.com>
	Fixes: NB#127609 - Changes to status area margins and icons



git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@41163 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2009-07-24  Jan Arne Petersen  <jpetersen@openismus.com>
 
-	Changes to status area margins and icons
+	Fixes: NB#127609 - Changes to status area margins and icons
 
 	* src/hd-status-area-box.c (ITEM_HEIGHT, ITEM_WIDTH, CUSTOM_MARGIN_9,
 	  SPACING, PADDING_LEFT, hd_status_area_box_size_allocate,
