--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-hildon-status-menu (0.3.21) unstable; urgency=low
+hildon-status-menu (0.3.21~unreleased) unstable; urgency=low
 
-  [ Peter Csaszar ]
-  * foo
+  [ Jan Arne ]
+  * Fixes: NB#127609 - Changes to status area margins and icons
 
  -- Peter Csaszar <peter.csaszar@blumsoft.eu>  Fri, 10 Jul 2009 14:08:57 +0200
 
