--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-hildon-status-menu (0.3.21~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.21) unstable; urgency=low
 
-  [ Jan Arne ]
+  Jan Arne:
   * Fixes: NB#127609 - Changes to status area margins and icons
 
- -- Peter Csaszar <peter.csaszar@blumsoft.eu>  Fri, 10 Jul 2009 14:08:57 +0200
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 30 Jul 2009 12:53:17 +0300
 
 hildon-status-menu (0.3.20) unstable; urgency=low
 
