--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-30  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.21
+	* configure.ac: 0.3.21
+
 2009-07-24  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#127609 - Changes to status area margins and icons
