--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.22
+	* configure.ac: 0.3.22
+
 2009-08-12  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#132456 - Status menu should not grab pointer
