--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 hildon-status-menu (0.3.23~unreleased) unstable; urgency=low
 
-  * foo
+  Jan Arne:
+  * Fixes: NB#133037 - Status menu is shown on top of USB mode dialog and
+    unable to close the status menu till the USB dailog is closed.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 12 Aug 2009 18:28:08 +0300
 
