--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-14  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.23
+	* configure.ac: 0.3.23
+
 2009-08-14  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#133037 - Status menu is shown on top of USB mode dialog and
