--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-hildon-status-menu (0.3.23~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.23) unstable; urgency=low
 
-  Jan Arne:
-  * Fixes: NB#133037 - Status menu is shown on top of USB mode dialog and
+  Jan Arne (regression fix):
+  * NB#133037 - Status menu is shown on top of USB mode dialog and
     unable to close the status menu till the USB dailog is closed.
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 12 Aug 2009 18:28:08 +0300
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 14 Aug 2009 15:06:17 +0300
 
 hildon-status-menu (0.3.22) unstable; urgency=low
 
