--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.24~unreleased) unstable; urgency=low
+
+  * foo
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 14 Aug 2009 15:08:50 +0300
+
 hildon-status-menu (0.3.23) unstable; urgency=low
 
   Jan Arne (regression fix):
