--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-09-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.24
+	* configure.ac: 0.3.24
+
 2009-09-07  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#133988 - RESTART should be implemented for
