--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hildon-status-menu (0.3.24~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.24) unstable; urgency=low
 
   Jan Arne:
   * NB#133988 - RESTART should be implemented for
@@ -6,7 +6,7 @@ hildon-status-menu (0.3.24~unreleased) unstable; urgency=low
   * NB#135390 - Status Area creates ConfigureRequest events even when it does
     not change size
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 14 Aug 2009 15:08:50 +0300
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 08 Sep 2009 11:04:07 +0300
 
 hildon-status-menu (0.3.23) unstable; urgency=low
 
