--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-09  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.25
+	* configure.ac: 0.3.25
+
 2009-10-08  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#134759 - Tighten the portrait status area UI
