--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-hildon-status-menu (0.3.25~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.25) unstable; urgency=low
 
   Jan Arne:
   * NB#134759 - Tighten the portrait status area UI
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue,  8 Sep 2009 11:06:12 +0300
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 09 Oct 2009 07:25:22 +0300
 
 hildon-status-menu (0.3.24) unstable; urgency=low
 
