--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 hildon-status-menu (0.3.26~unreleased) unstable; urgency=low
 
-  * foo
+  Jan Arne:
+  * NB#137136 - MfE disappears from Status Bar
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri,  9 Oct 2009 07:26:44 +0300
 
