--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-hildon-status-menu (0.3.26~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.26) unstable; urgency=low
 
   Jan Arne:
   * NB#137136 - MfE disappears from Status Bar
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri,  9 Oct 2009 07:26:44 +0300
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 14 Oct 2009 10:14:13 +0300
 
 hildon-status-menu (0.3.25) unstable; urgency=low
 
