Fixes: NB#142397 - Scroll bar is not indicating in status menu 	* src/hd-status-menu.c (hd_status_menu_map): Move the status menu up 	to the first item again and show the panning indicator.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@42709 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-10-14  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes: NB#142397 - Scroll bar is not indicating in status menu
+
+	* src/hd-status-menu.c (hd_status_menu_map): Move the status menu up
+	to the first item again and show the panning indicator.
+
 2009-10-14  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.26
