Fixes: NB#142800 - To update the bluetooth icon on to status area it 	is taking some time when the status area is filled with icons. 	* src/hd-status-area.c (hd_status_area_check_resize): Always resize 	the children.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@42710 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-10-14  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	Fixes: NB#142800 - To update the bluetooth icon on to status area it
+	is taking some time when the status area is filled with icons.
+
+	* src/hd-status-area.c (hd_status_area_check_resize): Always resize
+	the children.
+
+2009-10-14  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	Fixes: NB#142397 - Scroll bar is not indicating in status menu
 
 	* src/hd-status-menu.c (hd_status_menu_map): Move the status menu up
