Fixes: NB#142949 - Active status area also in portrait 	* src/hd-status-menu-box.c: Add support for one or two columns. 	* src/hd-status-menu.c: Add support for portrait mode status menu.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@42715 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-10-14  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	Fixes: NB#142949 - Active status area also in portrait
+
+	* src/hd-status-menu-box.c: Add support for one or two columns.
+	* src/hd-status-menu.c: Add support for portrait mode status menu.
+
+2009-10-14  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	Fixes: NB#142800 - To update the bluetooth icon on to status area it
 	is taking some time when the status area is filled with icons.
 
