--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.27
+	* configure.ac: 0.3.27
+
 2009-10-14  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#142949 - Active status area also in portrait
