start new version
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@42755 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.28~unreleased) unstable; urgency=low
+
+  * foo
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 16 Oct 2009 09:06:59 +0300
+
 hildon-status-menu (0.3.27) unstable; urgency=low
 
   Jan Arne:
