--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.28
+	* configure.ac: 0.3.28
+
 2009-10-16  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-menu.c (hd_status_menu_init): Disable status menu
