--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-hildon-status-menu (0.3.29~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.29) unstable; urgency=low
 
   Travis Reitter:
-  * NB#141707 - API for status area applets to detect if they are invisible is
-    absent.
+  * Fixes: NB#141707 - API for status area applets to detect if they are
+    invisible is absent.
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 16 Oct 2009 13:00:54 +0300
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 26 Oct 2009 10:41:19 +0200
 
 hildon-status-menu (0.3.28) unstable; urgency=low
 
